# vsomeip_work

./: .gitignore  README.md
01-ClientServerTrial/: CMakeLists.txt  README.md  client.cpp  client.hpp  server.cpp  server.hpp  server.json  vsomeip-local.json
02-ClientServerRPC/: CMakeLists.txt  server.cpp  server.json
03-vsomeipwithyocto/conf/distro/: mydistro-vsomeip.conf
03-vsomeipwithyocto/recipes-core/images/: my-vsomeip-image.bb
03-vsomeipwithyocto/recipes-vsomeip/vsomeip-server/: vsomeip-server.bb
03-vsomeipwithyocto/recipes-vsomeip/vsomeip-server/files/: vsomeip-server.service
04-vsomeipwithaosp/testrpi4vsomeip/: myvsomeip.mk
04-vsomeipwithaosp/testrpi4vsomeip/vsomeip/: Android.bp  CMakeLists.txt  client.cpp  client.json
04-vsomeipwithaosp/testrpi4vsomeip/vsomeip/buildsomeip/: CMakeCache.txt  Makefile  client  cmake_install.cmake
